--- a/BackMatter/Bibliography.tex
+++ b/BackMatter/Bibliography.tex
@@ -1,5 +1,7 @@
-%\bibliographystyle{babplain-uh}
-%\bibliography{Bibliography}
-\begin{thebibliography}{99}
-	
-\end{thebibliography}
+\bibliographystyle{babplain-uh}
+\bibliography{references}
+%\addcontentsline{toc}{chapter}{References}
+%\bibliographystyle{apalike2}
+%\begin{thebibliography}{99}
+%	
+%\end{thebibliography}
