--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -7,44 +7,45 @@
 
 \qquad 
 
-En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje de máquinas, del inglés \textit{machine learning} (ML). Sin embargo, el rendimiento de muchos métodos de aprendizaje de máquinas es muy sensible a una gran variedad de decisiones, lo que constituye una barrera para nuevos usuarios. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (por ejemplo, máquinas de vectores de soporte, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, especificidad, puntuación F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del tedioso proceso de prueba y error que es repetido en cada aplicación para de desarrollar buenos modelos de ML.
+En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje de máquinas, en inglés \textit{machine learning} (ML). Sin embargo, el rendimiento de muchos métodos de aprendizaje de máquinas es muy sensible a una gran variedad de decisiones, lo que constituye una barrera para nuevos usuarios. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (por ejemplo, \textit{support vector machines}, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, medida F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del tedioso proceso de prueba y error que es repetido en cada aplicación para desarrollar buenos modelos de ML.
 
-Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, del inglés \textit{automated machine learning} (AutoML). Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros), los estudios recientes buscan automatizar la creación de los pipelines de AutoML de extremo a extremo. El pipeline de AutoML suele consistir de varios procesos: preparación de datos, ingeniería de características, selección del modelo, ajuste de hiperparámetros y evaluación del modelo. 
+Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, denominada \textit{Automated Machine Learning} o AutoML. AutoML abarca el diseño de técnicas para automatizar y facilitar todo el proceso de implementación, experimentación y despliegue de algoritmos de aprendizaje automático. Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros), los estudios recientes buscan automatizar diferentes partes del proceso de aprendizaje de máquinas, tales como la preparación de los datos, la selección de algoritmos y el ajustes de hiperparámetros.
 
 AutoML está diseñado para reducir la demanda de los científicos de datos y permitir a los expertos construir automáticamente aplicaciones de ML sin mucho requerimiento de conocimiento estadístico y de ML. Por lo tanto, AutoML hace accesible enfoques de machine learning a los usuarios no expertos que están interesados en aplicarlos, pero no tienen los recursos para aprender sobre las tecnologías involucradas en detalle. Con el crecimiento exponencial del poder computacional y de los datos digitales, AutoML se ha convertido en un tema de creciente importancia tanto en la industria como en la academia.
 
-\section{Problema}
+\section*{Problema}
 
-A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de \textit{machine learning} es computacionalmente costosa y toma mucho tiempo. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo pipeline en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML.
+A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de \textit{machine learning} es computacionalmente costosa y toma mucho tiempo. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo algoritmo en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML.
 
 Otro de los fallos de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde cero con cada nuevo dataset. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. Por ejemplo, no son capaces de preveer que con pocos datos una red neuronal no va a obtener buenos resultados. 
 
-\section{Motivación}
+\section*{Motivación}
 
-En esta tesis se realiza una propuesta para superar estos obstáculos. El principal objetivo del enfoque propuesto es asistir a los profesionales de la industria y a los investigadores en ciencias de datos para la selección de modelos incorporando un componente en los sistemas AutoML. Este componente acelerará la búsqueda de AutoML proveyendo un conjunto inicial de algoritmos y las configuraciones de sus hiperparámetros. Esta recomendación inicial deberá en última instancia dar mejores resultados mediante el análisis previo de problemas relacionados. Por lo tanto, esta característica tiene como objetivo emular el rol del experto en el campo de aprendizaje de máquinas. Con el fin de lograr esto, hacemos uso del concepto de meta-learning. 
+En esta tesis se realiza una propuesta para superar estos obstáculos. El principal objetivo del enfoque propuesto es asistir a los profesionales de la industria y a los investigadores en ciencias de datos en la selección de modelos incorporando un componente en los sistemas AutoML. Este componente acelerará la búsqueda de AutoML proveyendo un conjunto inicial de algoritmos y las configuraciones de sus hiperparámetros. Esta recomendación inicial deberá en última instancia dar mejores resultados mediante el análisis previo de problemas relacionados. Por lo tanto, esta característica tiene como objetivo emular el rol del experto en el campo de aprendizaje de máquinas. Con el fin de lograr esto, hacemos uso del concepto de meta-learning. 
 
-Meta-learning, o \textit{aprender a aprender}, es la ciencia de observar sistemáticamente cómo se desempeñan los diferentes enfoques de aprendizaje automático en una amplia gama de tareas de aprendizaje, y luego aprender de esta experiencia, o metadatos, para aprender nuevas tareas mucho más rápido de lo que sería posible de otra manera. Esto no solo acelera y mejora drásticamente el diseño de pipelines de aprendizaje automático, sino que también nos permite reemplazar algoritmos diseñados a mano con enfoques novedosos aprendidos de una manera basada en datos.
+Meta-learning, o \textit{aprender a aprender}, es la ciencia de observar sistemáticamente cómo se desempeñan los diferentes enfoques de aprendizaje automático en una amplia gama de tareas de aprendizaje, y luego aprender de esta experiencia, o meta-datos, para aprender nuevas tareas mucho más rápido de lo que sería posible de otra manera. Esto no solo acelera y mejora drásticamente el diseño de algoritmos de aprendizaje automático, sino que también nos permite reemplazar algoritmos diseñados a mano con enfoques novedosos aprendidos de una manera basada en datos.
+
+Aunque a través meta-learning se pueden sugerir rápidamente algunas inicializaciones de los algoritmos de ML que son probables que tengan buenos resultados, no es posible obtener información detallada sobre sus rendimientos. En constraste, los algoritmos de optimización usados en herramientas de AutoML son lentos al buscar en grandes espacios de hiperparámetros, pero son capaces de obtener informacción más detallada sobre el rendimiento de los algoritmos de ML. Es por esto que el enfoque de meta-learning propuesto es complementario al proceso de optimización, seleccionando \textit{k} configuraciones de meta-learning y usando su resultado para inicializar el proceso de optimización.
 
 Mediante meta-learning, intentamos ganar un poco de perspectiva sacada de los meta-datos de experimentos de ML. Los resultados de cada entrenamiento es guardado con caracterizaciones del dataset y sus detalles de rendimiento y son usados en las ejecuciones futuras. Ha habido substancial interés en el espacio de meta-learning en los recientes años y muchos sistemas de AutoML lo han integrado.
 
-\section{Antecedentes}
+\section*{Antecedentes}
 
 Esta tesis forma parte de las líneas de investigación del grupo de Inteligencia Artificial de la facultad de Matemática y Computación de la Universidad de La Habana. En dicho grupo se ha llevado a cabo el sistema de AutoGOAL,  por lo que esta herramienta es la usada para la incorporación de conocimiento experto mediante meta-learning. AutoGOAL es un sistema AutoML implementado como una biblioteca de código abierto en el lenguaje de programación Python. AutoGOAL utiliza técnicas heterogéneas, que a diferencia de otros sistemas, puede construir automáticamente flujos de aprendizaje automático que combinen técnicas y algoritmos de diferentes bibliotecas, incluidos clasificadores lineales, herramientas de procesamiento de lenguaje natural y redes neuronales.
 
-\section{Propuesta}
+\section*{Propuesta}
 
-meta-learning, el cual está compuesto por dos fases principales: la fase offline que es de aprendizaje y la fase online que es de recomendación. Dado un dataset, una tarea de evaluación (por ejemplo, clasificación o regresión) y una métrica, el algoritmo de meta-learning propuesto produce una lista de ranking de los modelos candidatos. Dicha lista está basada en el rendimiento esperado de los modelos candidatos con respecto a la métrica dada. Esta lista es producida solamente con meta-conocimiento ganado del análisis de datasets relacionados y el entrenamiento de combinaciones de algoritmos en dichos datasets, sin ejecutar ninguno de los algoritmos candidatos.
+El enfoque de meta-learning propuesto, está compuesto por dos fases principales: la fase offline, que es de aprendizaje y la fase online, que es de recomendación. Dado un dataset, una tarea de evaluación (por ejemplo, clasificación o regresión) y una métrica, el algoritmo de meta-learning propuesto produce una lista de ranking de los modelos candidatos. Dicha lista está basada en el rendimiento esperado de los modelos candidatos con respecto a la métrica dada. Esta lista es producida solamente con meta-conocimiento ganado del análisis de datasets relacionados y el entrenamiento de combinaciones de algoritmos en dichos datasets, sin ejecutar ninguno de los algoritmos candidatos. El resultado obtenido tiene como objetivo sugerir rápidamente algunas inicializaciones para AutoGOAL.
 
-- Propuesta, contribuciones
-No estoy segura si con lo que he hablado de la propuesta es suficiente, o si debería entrar un poco más en detalles… Por otro lado esto creo que va mejor antes de los antecedentes.
+- Debería hablar un poco más sobre contribuciones completas..
 
-\section{Estructura de la tesis}
+\section*{Estructura de la tesis}
 
 El resto de la tesis está organizada de la siguiente manera:
 
 \begin{itemize}
-	\item El capítulo 2 (Estado del Arte) introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para lidiar con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML.
-	\item El capítulo 3 (Propuesta) describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de los meta-features usados y los meta-modelos desarrollados.
-	\item El capítulo 4 (Experimentación y resultados) describe brevemente los aspectos de la metodología experimental adoptada, investiga los resultados obtenidos y se realiza una discusión de los mismos.
-	\item Finalmente, en el capítulo 5 (conclusiones) se presentan las conclusiones de esta tesis, y se discuten las limitaciones y consideraciones finales. Por último, se realizan sugerencias para estudios futuros.
+	\item El capítulo \ref{chapter:review} (Estado del Arte) introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para lidiar con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML.
+	\item El capítulo \ref{chapter:proposal} (Propuesta) describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de los meta-features usados y los meta-modelos desarrollados.
+	\item El capítulo \ref{chapter:results} (Experimentación y resultados) describe brevemente los aspectos de la metodología experimental adoptada, investiga los resultados obtenidos y se realiza una discusión de los mismos.
+	\item Finalmente, en ~\ref{conclusion} (conclusiones) se presentan las conclusiones de esta tesis, y se discuten las limitaciones y consideraciones finales. Por último, se realizan sugerencias para estudios futuros.
 \end{itemize}
