--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -19,6 +19,9 @@ A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los 
 
 Otro de los fallos de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde cero con cada nuevo dataset. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. Por ejemplo, no son capaces de preveer que con pocos datos una red neuronal no va a obtener buenos resultados. 
 
+% Although progress in AutoML is vast, the considered scenarios are somewhat constrained, e.g., in the type of approached problem, in the assumptions on data, in the size of datasets, etc. In this context, one of the most desirable features for AutoML methods is to work under a lifelong machine learning (LML) setting. LML refers to systems that can sequentially learn many tasks from one or more domains in its lifetime, these systems (not restricted to supervised learning) require the ability to retain knowledge, adapt to changes and transfer knowledge when learning a new task. An AutoML method that learns from different tasks and that is able to adapt itself during its lifetime would comprise a competitive and robust all-problem machine learning solution. (drift)
+
+
 \section*{Motivación}
 
 En esta tesis se realiza una propuesta para superar estos obstáculos. El principal objetivo del enfoque propuesto es asistir a los profesionales de la industria y a los investigadores en ciencias de datos en la selección de modelos incorporando un componente en los sistemas AutoML. Este componente acelerará la búsqueda de AutoML proveyendo un conjunto inicial de algoritmos y las configuraciones de sus hiperparámetros. Esta recomendación inicial deberá en última instancia dar mejores resultados mediante el análisis previo de problemas relacionados. Por lo tanto, esta característica tiene como objetivo emular el rol del experto en el campo de aprendizaje de máquinas. Con el fin de lograr esto, hacemos uso del concepto de meta-learning. 
