--- a/Thesis.tex
+++ b/Thesis.tex
@@ -14,6 +14,8 @@
 \floatstyle{plaintop}
 \restylefloat{table}
 
+%\newtheorem{definition}{Definition}[section]
+
 \renewcommand{\tablename}{Tabla}
 \renewcommand{\listalgorithmcfname}{Índice de Algoritmos}%
 %\dontprintsemicolon
